--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="default_padding">16dp</dimen>
+
+    <dimen name="dashboard_header_text_size">18sp</dimen>
 </resources>
