--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_200">#FFBCB1FF</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_700">#FF2E86AB</color>
+    <color name="teal_c7">#7AE7C7</color>
+    <color name="teal_c3">#91EDC3</color>
+    <color name="blue_bd">#0277BD</color>
+    <color name="gray_54">#565554</color>
+    <color name="gray_300">#D1D5DB</color>
+    <color name="lime_b7">#D6FFB7</color>
+    <color name="yellow_89">#FFF689</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
