--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.XPensive" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        <!-- Primary app color. -->
+        <item name="colorPrimary">@color/teal_c7</item>
+        <item name="colorPrimaryVariant">@color/teal_c3</item>
+        <item name="colorOnPrimary">@color/blue_bd</item>
+        <!-- Secondary app color. -->
+        <item name="colorSecondary">@color/purple_200</item>
+        <item name="colorSecondaryVariant">@color/purple_200</item>
+        <item name="colorOnSecondary">@color/white</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!-- Default font family -->
+        <item name="android:fontFamily">@font/mulish</item>
     </style>
 
     <style name="Theme.XPensive.NoActionBar">
@@ -22,4 +22,16 @@
     <style name="Theme.XPensive.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.XPensive.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="DefaultTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="android:minHeight">@dimen/add_source_input_min_height</item>
+        <!--<item name="boxBackgroundColor">@android:color/white</item>-->
+        <item name="boxBackgroundMode">outline</item>
+        <item name="boxCornerRadiusBottomEnd">@dimen/rounded_rectangle_radius</item>
+        <item name="boxCornerRadiusBottomStart">@dimen/rounded_rectangle_radius</item>
+        <item name="boxCornerRadiusTopEnd">@dimen/rounded_rectangle_radius</item>
+        <item name="boxCornerRadiusTopStart">@dimen/rounded_rectangle_radius</item>
+        <item name="boxStrokeColor">@color/text_input_box_stroke</item>
+        <item name="boxStrokeWidth">@dimen/rounded_rectangle_border_width</item>
+    </style>
 </resources>
