--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="gray_300">#D1D5DB</color>
     <color name="lime_b7">#D6FFB7</color>
     <color name="yellow_89">#FFF689</color>
+    <color name="green">#21D91D</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
