--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,6 +6,7 @@
     <item
         android:id="@+id/action_manage"
         android:title="@string/action_manage"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_gear"
+        app:showAsAction="always" />
 
 </menu>
