--- a/app/src/main/res/drawable/rounded_rectangle_text_background.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_text_background.xml
@@ -3,6 +3,6 @@
 
     <corners android:radius="5dp" />
 
-    <solid android:color="@color/teal_c7" />
+    <solid android:color="?attr/colorOnSecondary" />
 
 </shape>
