--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,6 @@
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/dashboard_fab_description"
-        app:srcCompat="@drawable/ic_add" />
+        app:srcCompat="@drawable/ic_write" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
