--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="extra_small_padding">4dp</dimen>
     <dimen name="small_padding">8dp</dimen>
+    <dimen name="medium_padding">12dp</dimen>
     <dimen name="default_padding">16dp</dimen>
     <dimen name="big_padding">24dp</dimen>
     <dimen name="default_button_text_size">16sp</dimen>
@@ -12,12 +13,13 @@
     <dimen name="title_text_size">16sp</dimen>
     <dimen name="header_text_size">18sp</dimen>
 
-    <dimen name="rounded_rectangle_vertical_padding">16dp</dimen>
+    <dimen name="rounded_rectangle_vertical_padding">4dp</dimen>
     <dimen name="rounded_rectangle_horizontal_padding">8dp</dimen>
     <dimen name="rounded_rectangle_radius">10dp</dimen>
     <dimen name="rounded_rectangle_border_width">2dp</dimen>
 
     <dimen name="dashboard_header_text_size">18sp</dimen>
+    <dimen name="add_history_input_text_size">16sp</dimen>
 
     <dimen name="add_source_input_text_size">16sp</dimen>
     <dimen name="add_source_input_min_height">50dp</dimen>
