--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -20,8 +20,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="40dp">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/textview_chart_header"
@@ -34,10 +33,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.Placeholder
+            <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/xpense_chart"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="wrap_content"
+                android:minHeight="300dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textview_chart_header" />
 
@@ -55,10 +55,12 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerview_expense_history"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingBottom="40dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/textview_history_header"
+
                 app:list="@{viewModel.xpenseHistoryList}"
                 tools:listitem="@layout/item_xpense_history" />
 
